--- a/8-ByteBank/8-ByteBank.csproj
+++ b/8-ByteBank/8-ByteBank.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Client.cs" />
-    <Compile Include="ContaCorrente.cs" />
+    <Compile Include="CurrentAccount.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
